fixed navbar overlap
used margin-top on pokemon-list to keep it from being covered by navigation bar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,16 +7,12 @@ body {
   font-family: 'Cabin', sans-serif;
 }
 
-.page-container {
-  margin-top: 60px;
-  }
-
 /* pokemon list button array */
 .button-class {
   margin-left: 40%;
   margin-right: 40%;
   display: grid;
-  font-size: 16px;
+  font-size: 18px;
   padding: 5px;
   text-align: center;
   cursor: pointer;
@@ -65,6 +61,7 @@ border-radius: 0%;
 }
 
 .pokemon-list {
+  margin-top: 50px;
   list-style-type: none;
 }
 
